ENHANCE: Start and End of processing dates supported for MIF Files

--- a/base_edi/views/edi_config_view.xml
+++ b/base_edi/views/edi_config_view.xml
@@ -197,6 +197,8 @@
                                                         <field name="log_note"/>
                                                         <field name="mif_directory"/>
                                                         <field name="state"/>
+                                                        <field name="processing_start_date"/>
+                                                        <field name="processing_end_date"/>
                                                     </tree>
                                                 </field>
                                             </group>
